2006-02-24  Jeffrey Altman <jaltman@mit.edu>

 	* Makefile.in: support for 64-bit Windows builds

2003-12-13  Ken Raeburn  <raeburn@mit.edu>

	* ftp.c (do_auth): Handle a return code of 335, where the
	authentication exchange requires more messages.

2003-06-25  Tom Yu  <tlyu@mit.edu>

	* ftp.c (do_auth): Call gss_release_buffer() on send_tok
	immediately after sending it.  Call gss_release_name() on
	target_name at outer_loop instead of inside the loop.

2003-06-16  Ken Raeburn  <raeburn@mit.edu>

	* ftp.c (recvrequest): Add new argument indicating whether "-" and
	"|..." special treatment should be disabled.
	* ftp_var.h (recvrequest): Update declaration.
	* cmds.c (remglob, ls, mls): Pass 0 as the extra argument.
	(mget): Pass 1.
	(getit): Pass 1 iff only one filename was supplied.

2003-06-05  Sam Hartman  <hartmans@mit.edu>

	* pclose.c (mypopen): use fork not vfork

2003-01-09  Ken Raeburn  <raeburn@mit.edu>

	* ftp.c (hookup, initconn, dataconn): Use socklen_t when passing
	address to socket functions.

2002-11-08  Ken Raeburn  <raeburn@mit.edu>

	* main.c (makeargv): Report an error if parsed arguments won't fit
	in margv array.
	* ftp_var.h (line, argbuf): Extend to 500 bytes.

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-06-13  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in ($(OUTPRE)ftp.exe): Use ws2_32.lib instead of
	wsock32.lib.

2002-04-11  Sam Hartman  <hartmans@mit.edu>

	* radix.c : Initialize c and D to suppress warning; code was already correct

2002-04-10  Danilo Almeida  <dalmeida@mit.edu>

	* ftp.c: Include Winsock 2 instead of Winsock.
	* ftp_var.h: Include Winsock 2 headers.
	* secure.c: Include port-sockets.h on Win32.
	* main.c: Include mswsock.h (MS Winsock extensions) so that we get
	some socket options we need to convert sockets to "file